# htmx-intro

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  old-build.rs  tailwind.config.js
public/: out.css
src/: auth.rs  lib.rs  main.rs  routes.rs  templates.rs
src/routes/: auth.rs
static/: login.js  out.css
templates/: base.html  index.html  login.html  macros.html
templates/partials/: list.html  task.html
