[package]
name = "htmx-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
leptos = { version = "0.4.8", features = ["ssr"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tower-http = { version = "0.4.3", features = ["fs", "compression-br"] }
tera = "1"
lazy_static = "1.4.0"
tower = "0.4.13"
