[package]
name = "htmx-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tower-http = { version = "0.4.3", features = ["fs", "compression-br"] }
tera = "1"
tower = "0.4.13"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "uuid", "postgres"] }
rand = "0.8.5"
shuttle-axum = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-static-folder = "0.24.0"
shuttle-shared-db = { version = "0.24.0", features = ["postgres"] }
